# detect_armor_robomaster

./: LICENSE  README.md
docs/: command.txt  frames_2026-03-02_14.14.34.gv  程序设计报告.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/armor_info_subscriber/share/ament_index/resource_index/package_run_dependencies/: armor_info_subscriber
install/armor_info_subscriber/share/ament_index/resource_index/parent_prefix_path/: armor_info_subscriber
install/armor_info_subscriber/share/armor_info_subscriber/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/armor_info_subscriber/share/armor_info_subscriber/cmake/: armor_info_subscriberConfig.cmake
install/armor_interfaces/include/armor_interfaces/armor_interfaces/msg/detail/: armor_info__builder.hpp  armor_info__description.c  armor_info__functions.c  armor_info__functions.h  armor_info__rosidl_typesupport_fastrtps_c.h  armor_info__rosidl_typesupport_fastrtps_cpp.hpp  armor_info__struct.h  armor_info__struct.hpp  armor_info__traits.hpp  armor_info__type_support.c  armor_info__type_support.cpp  armor_info__type_support.h
install/armor_interfaces/share/ament_index/resource_index/parent_prefix_path/: armor_interfaces
install/armor_interfaces/share/ament_index/resource_index/rosidl_interfaces/: armor_interfaces
install/armor_interfaces/share/armor_interfaces/: local_setup.sh  package.sh  package.xml
install/armor_interfaces/share/armor_interfaces/cmake/: armor_interfacesConfig.cmake  armor_interfaces__rosidl_typesupport_cExport-noconfig.cmake  armor_interfaces__rosidl_typesupport_cExport.cmake  armor_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  armor_interfaces__rosidl_typesupport_cppExport.cmake  armor_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  armor_interfaces__rosidl_typesupport_introspection_cExport.cmake  armor_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  armor_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_armor_interfaces__rosidl_generator_cExport-noconfig.cmake  export_armor_interfaces__rosidl_generator_cExport.cmake  export_armor_interfaces__rosidl_generator_cppExport.cmake  export_armor_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_armor_interfaces__rosidl_generator_pyExport.cmake  export_armor_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_armor_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_armor_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_armor_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/armor_interfaces/share/armor_interfaces/msg/: ArmorInfo.idl  ArmorInfo.json  ArmorInfo.msg
install/armor_tracker_ros2/lib/armor_tracker_ros2/: armor_tracker_node
install/armor_tracker_ros2/share/ament_index/resource_index/package_run_dependencies/: armor_tracker_ros2
install/armor_tracker_ros2/share/ament_index/resource_index/parent_prefix_path/: armor_tracker_ros2
install/armor_tracker_ros2/share/armor_tracker_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/armor_tracker_ros2/share/armor_tracker_ros2/cmake/: armor_tracker_ros2Config.cmake
install/armor_tracker_ros2/share/armor_tracker_ros2/launch/: armor_tracker.launch.py
install/armor_tracker_ros2/share/armor_tracker_ros2/rviz/: armor_tracker.rviz
log/: latest_build
src/armor_info_subscriber/: CMakeLists.txt  package.xml
src/armor_info_subscriber/src/: armor_info_subscriber.cpp
src/armor_interfaces/: CMakeLists.txt
src/armor_tracker_ros2/: CMakeLists.txt
src/armor_tracker_ros2/include/: armorTracker.hpp  kalmanFilter.hpp  openCVBasicDetector.hpp  openCVBasicDraw.hpp  openCVBasicFX.hpp  openCVBasicImageOperator.hpp  openCVBasicOperator.hpp
src/armor_tracker_ros2/src/: armorTracker.cpp  kalmanFilter.cpp  main.cpp  openCVBasicDetector.cpp  openCVBasicDraw.cpp  openCVBasicFX.cpp  openCVBasicImageOperator.cpp  openCVBasicOperator.cpp
src/armor_tracker_ros2/urdf/: armor.urdf
